# minimal_http

./: .gitignore  Cargo.toml  README.md  devenv.nix
app/: Cargo.toml
app/src/: main.rs
server/: Cargo.toml
server/src/: lib.rs
server/src/app/: mod.rs
server/src/models/: headers.rs  mod.rs  request.rs  response.rs  status.rs
server/src/router/: mod.rs
server/src/tests/: test.rs
server/src/thread_pool/: mod.rs
server/tests/: echo.rs  files.rs  root.rs  user_agent.rs
server/tests/test_utils/: mod.rs
src/: lib.rs  main.rs
src/models/: content_type.rs  encoding.rs  headers.rs  method.rs  mod.rs  request.rs  response.rs  status.rs
src/router/: mod.rs
src/server/: mod.rs
