cargo-features = ["edition2024"]

[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
thiserror = "2.0.12"
flate2 = { version = "1.1.0", features = ["zlib"] }
strum = { version = "0.27.1", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.12.15", features = ["gzip", "blocking"] }
